# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-1.8.11 (02 Apr 2002)

  02 Apr 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: important fixes
  for movefile() -- ownership now preserved across filesystems, mv -f fallback
  for special files, other optimizations and robustness improvements.  Important
  fixes all-round.

  02 Apr 2002; Geert Bevin <gbevin@gentoo.org> emerge: 
  fixed bad indentation of a part of the code that made unmerging multiple
  packages behave badly

*portage-1.8.10 (01 Apr 2002)

  01 Apr 2002; Daniel Robbins <drobbins@gentoo.org> make.globals: removed USE
  settings from make.globals.

  01 Apr 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: In trying to fix
  the glibc merge bug, we rewrote movefile() and it now runs blazingly fast.  I
  also tweaked the code to remove the need for an ">>> Updating mtimes..."
  stage.  This is all done dynamically now.  *Much* faster.  And hopefully
  solid for glibc upgraders.

*portage-1.8.9.4 (01 Apr 2002)

  31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: adapted
  movefile() which should preserves timestamps and ownership on files and
  symlinks it moves.

*portage-1.8.9.3 (31 Mar 2002)

  31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: promising
  rewrite of movefile() not only will probably fix glibc merge bug but also
  speeds up merging at least 20x!  Calling "mv" for every file really make
  things super-slow!

*portage-1.8.9.2 (31 Mar 2002)

  31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: desperate attempt
  to fix movefile() bug... a hack really.  glibc merges still dying.

*portage-1.8.9.1 (31 Mar 2002)

  31 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: it appears that
  movefile() (using "/bin/mv") can still die if moving a new symlink on top of
  an existing library symlink.  Upon failure, we now use a fallback mechanism